@@ -1,8 +1,8 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.7.2
-Date: 2013-10-21
+Version: 1.7.3
+Date: 2014-03-05
 Depends: GSEABase, limma (>= 3.15.14)
 Imports: Biobase, BiocGenerics, methods, GSEAlm, Category, Matrix (>=
         1.0.9), parallel, annotate, genefilter, AnnotationDbi
